# bf-match-rust

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/match-bench/: Cargo.toml
crates/match-bench/src/: lib.rs  metrics.rs  workload.rs
crates/match-contract/: Cargo.toml  config.example.yaml
crates/match-contract/src/: bootstrap.rs  config.rs  error_queue.rs  health.rs  inbound.rs  lib.rs  main.rs  outbound.rs  redis_store.rs  symbol_worker.rs  telemetry.rs
crates/match-contract/tests/: redis_integration.rs
crates/match-core/: Cargo.toml
crates/match-core-hp/: Cargo.toml
crates/match-core-hp/src/: adapter.rs  affinity.rs  art_index.rs  book.rs  engine.rs  level_index.rs  lib.rs  order_store.rs  scale.rs  spsc.rs  types.rs
crates/match-core-hp/tests/: adapter_bborder.rs  art_index_ops.rs  (+5 more)
crates/match-core/src/: book.rs  depth.rs  engine.rs  event.rs  id.rs  lib.rs  match_limit.rs  match_market.rs  order.rs  price_utils.rs
crates/match-core/src/handlers/: fok_buy.rs  fok_sell.rs  height_buy.rs  height_sell.rs
crates/match-core/tests/: l1_advanced_sell.rs  l1_book_and_engine.rs  l1_coverage_gaps.rs  l1_fok_branches.rs  l1_limit_cross.rs  l1_limit_fill.rs  l1_market_edges.rs  l1_market_gear.rs  order_book_order.rs
crates/match-wal/: Cargo.toml
docs/: COVERAGE.md  README.md  bench-results.md  bench-results.zh-CN.md  best-practices.md  e2e-budget.md  fair-compare.md  perf-hotpath-2026-07.md  perf-hotpath-2026-07.zh-CN.md  rmq-spike.md
docs/specs/: 2026-07-18-pe-optimizations-design.md
scripts/: check-branch-coverage.sh
(+10 files in other folders)
